fixed desktop alignment issue

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,6 +33,7 @@ body {
 
 .authorDetails {
     height: 65px;
+    margin-bottom: 10px;
 }
 
 .tooLong {
@@ -55,8 +56,8 @@ body {
 
 .iconFill {
     background-color: var(--lightGrayishBlue);
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
 
 .attribution { 
